--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@antv/data-set": "^0.11.8",
     "@arco-design/web-react": "^2.60.1",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "bizcharts": "^4.1.23",
     "less": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
